--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,10 +43,12 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
+      working-directory: ./terraform
       run: terraform plan -input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
+      working-directory: ./terraform
       # if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
 
