--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,22 +40,22 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       working-directory: ./terraform
+      run: terraform init
+
+    # Generates an execution plan for Terraform
+    - name: Terraform Plan
+      working-directory: ./terraform
       run: |
        export ARM_CLIENT_ID=$ARM_CLIENT_ID
        export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
        export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
        export ARM_TENANT_ID=$ARM_TENANT_ID
-       terraform init
+       terraform plan
       env:
           ARM_CLIENT_ID: ${{secrets.ARM_CLIENT_ID}}
           ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET}}
           ARM_SUBSCRIPTION_ID: ${{secrets.ARM_SUBSCRIPTION_ID}}
           ARM_TENANT_ID: ${{secrets.ARM_TENANT_ID}}
-
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      working-directory: ./terraform
-      run: terraform plan -input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
