--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,6 +36,12 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+    
+    # connexion à azure
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
@@ -45,17 +51,7 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       working-directory: ./terraform
-      run: |
-       export ARM_CLIENT_ID=$ARM_CLIENT_ID
-       export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
-       export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
-       export ARM_TENANT_ID=$ARM_TENANT_ID
-       terraform plan
-      env:
-          ARM_CLIENT_ID: ${{secrets.ARM_CLIENT_ID}}
-          ARM_CLIENT_SECRET: ${{secrets.ARM_CLIENT_SECRET}}
-          ARM_SUBSCRIPTION_ID: ${{secrets.ARM_SUBSCRIPTION_ID}}
-          ARM_TENANT_ID: ${{secrets.ARM_TENANT_ID}}
+      run: terraform plan
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
