--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,11 +52,11 @@ jobs:
     - name: Terraform Plan
       working-directory: ./terraform
       run: |
-        export CLIENT_ID=${{ secrets.CLIENT_ID }}
-        export CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}
-        export ARM_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        export ARM_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
-        terraform plan
+          az login --service-principal \
+          -u ${{ secrets.AZURE_CLIENT_ID }} \
+          -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+          --tenant ${{ secrets.AZURE_TENANT_ID }}
+          terraform plan
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
     - name: Terraform Apply
