--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,8 +53,8 @@ jobs:
       working-directory: ./terraform
       run: |
           az login --service-principal \
-          -u ${{ secrets.AZURE_CLIENT_ID }} \
-          -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+          -u ${{ secrets.CLIENT_ID }} \
+          -p ${{ secrets.CLIENT_SECRET }} \
           --tenant ${{ secrets.AZURE_TENANT_ID }}
           terraform plan
 
