--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -16,8 +16,8 @@ jobs:
     env:
       CLIENT_ID: ${{ secrets.CLIENT_ID }}
       CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
     runs-on: ubuntu-latest
     environment: production
 
@@ -55,7 +55,7 @@ jobs:
           az login --service-principal \
           -u ${{ secrets.CLIENT_ID }} \
           -p ${{ secrets.CLIENT_SECRET }} \
-          --tenant ${{ secrets.AZURE_TENANT_ID }}
+          --tenant ${{ secrets.TENANT_ID }}
           terraform plan
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
