--- a/.github/workflows/deploy_portfolio.yml
+++ b/.github/workflows/deploy_portfolio.yml
@@ -20,7 +20,7 @@ jobs:
         slot-name: 'production'  # Utilise 'production' pour le déploiement standard
         package: './'  # Le répertoire contenant ton application HTML/CSS
       env:
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        AZURE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
+        AZURE_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
