--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -23,9 +23,15 @@ jobs:
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar-cache
+      - name: Install SonarScanner
+        run: |
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+          unzip sonar-scanner-cli-4.6.2.2472-linux.zip
+          mv sonar-scanner-4.6.2.2472-linux sonar-scanner
+          echo 'export PATH=$PATH:$(pwd)/sonar-scanner/bin' >> $GITHUB_ENV
       - name: SonarQube Scan
         run: |
           sonar-scanner -X
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}  # Ensure this is the correct and accessible URL
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
