--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -23,15 +23,10 @@ jobs:
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar-cache
-      - name: Install SonarScanner
-        run: |
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
-          unzip sonar-scanner-cli-4.6.2.2472-linux.zip
-          mv sonar-scanner-4.6.2.2472-linux sonar-scanner
-          echo 'export PATH=$PATH:$(pwd)/sonar-scanner/bin' >> $GITHUB_ENV
       - name: SonarQube Scan
-        run: |
-          sonar-scanner -X
+        uses: sonarsource/sonarqube-scan-action@v1.0.1
+        with:
+          projectBaseDir: '.'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
