--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -27,7 +27,7 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@v4.1.0
         with:
           projectBaseDir: '.'
-          args: -X
+          args: -X -Dsonar.verbose=true
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
