--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -9,10 +9,18 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+
+    services:
+      sonar:
+        image: sonarqube:latest
+        options: --health-cmd="curl --silent --fail http://localhost:9000/api/system/health" --health-interval=30s --health-timeout=30s --health-retries=5
+        ports:
+          - 9000:9000
+
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0
       - name: Setup JDK
         uses: actions/setup-java@v2
         with:
@@ -23,6 +31,8 @@ jobs:
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar-scanner-cli-6.2.1.4610
+      - name: Wait for SonarQube to be ready
+        run: sleep 30
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@v4.1.0
         with:
@@ -30,5 +40,4 @@ jobs:
           args: -X -Dsonar.verbose=true
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-         
+          SONAR_HOST_URL: http://localhost:9000
